--- a/pay.html
+++ b/pay.html
@@ -245,7 +245,7 @@
     </div>
 
     <video id="promoVideo" controls>
-        <source src="https://d3v55qvjb2v012.cloudfront.net/gyZU/2025/01/01/13/29/cTVVIUneY3k/sc.mp4?srcid=cTVVIUneY3k&Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiaHR0cHM6Ly9kM3Y1NXF2amIydjAxMi5jbG91ZGZyb250Lm5ldC9neVpVLzIwMjUvMDEvMDEvMTMvMjkvY1RWVklVbmVZM2svc2MubXA0P3NyY2lkPWNUVlZJVW5lWTNrIiwiQ29uZGl0aW9uIjp7IkRhdGVMZXNzVGhhbiI6eyJBV1M6RXBvY2hUaW1lIjoxNzM1ODI0Nzg1fX19XX0_&Signature=SGJ83lIkyN6wI02fTMijMFcjOdxKn1Inhh6gyvT3jB4iqsDdLTm0NNfcaY~f2AyGmEVkxf1grBuvyOeGRQysZMwMzVPv9Bn9uTtl2HmB5u5alaL2gP96IXrU6-3Hrp4SDdtNLSLiGy~GCdRlE7YrAS~kSPOjDDcqhvNcH~peBmg_&Key-Pair-Id=APKAI4E2RN57D46ONMEQ" type="video/mp4">
+        <source src="https://d3v55qvjb2v012.cloudfront.net/gyaA/2025/01/02/09/31/cTVnQwnerdE/sc.mp4?srcid=cTVnQwnerdE&Policy=eyJTdGF0ZW1lbnQiOlt7IlJlc291cmNlIjoiaHR0cHM6Ly9kM3Y1NXF2amIydjAxMi5jbG91ZGZyb250Lm5ldC9neWFBLzIwMjUvMDEvMDIvMDkvMzEvY1RWblF3bmVyZEUvc2MubXA0P3NyY2lkPWNUVm5Rd25lcmRFIiwiQ29uZGl0aW9uIjp7IkRhdGVMZXNzVGhhbiI6eyJBV1M6RXBvY2hUaW1lIjoxNzM1ODk2ODQ0fX19XX0_&Signature=WkYxiQ3GRp28QXNitipaUeNsYHUo~bwSMuJ5FZ54X0SsZpfFbLeQJolrH0RhBeJxLhTvuQUQW6hU~gvi10JTkKAmjYku0BXTClwe3SxpwhBzYKZWnb1-F966XsAl~8jR5pr1EZ4LbGa2wwF7t8P4yCbxkkgDITupB1f695Xuf5w_&Key-Pair-Id=APKAI4E2RN57D46ONMEQ" type="video/mp4">
         আপনার ব্রাউজার ভিডিও প্লে করতে পারছে না।
     </video>
 
