--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,8 @@
     <title>আমরা কে ?</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" href="https://www.amartap.com/favicon.png" type="image/png">
     <style>
         body {
             font-family: 'Noto Serif', serif;
